<resources>
    <string name="app_name">GPIO_Client</string>
    <string name="device_a">DEVICE_A</string>
    <string name="device_b">DEVICE_B</string>
    <string name="device_c">DEVICE_C</string>
    <string name="customName">Custom name:</string>
    <string name="host">Host:</string>
    <string name="port">Port:</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="setting">Setting</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>
